--- a/Jet-Racer/index.html
+++ b/Jet-Racer/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    canvas {
+      border: 2px solid #000;
+      display: block;
+      margin: 5vh auto;
+    }
+  </style>
+  <script src="game.js" defer></script>
+  <title>Jet Racer Game</title>
+</head>
+<body>
+<canvas id="gameCanvas" width="1000" height="700"></canvas>
+</body>
+</html
