--- a/Jet-Racer/index.html
+++ b/Jet-Racer/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    canvas {
-      border: 2px solid #000;
-      display: block;
-      margin: 5vh auto;
-    }
-  </style>
-  <script src="game.js" defer></script>
-  <title>Jet Racer Game</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Game Test</title>
 </head>
-<body>
-<canvas id="gameCanvas" width="1000" height="700"></canvas>
+<body onload="startGame()">
+
 </body>
-</html
+<script src="controls.js"></script>
+<script src="globals.js"></script>
+<script src="gameArea.js"></script>
+<script src="updateGameArea.js"></script>
+<script src="component.js"></script>
+<script src="main.js"></script>
+</html>
