--- a/Jet-Racer/index.html
+++ b/Jet-Racer/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="pauseMenu.css">
-
-    <title>Game Test</title>
-</head>
-<body onload="startGame()">
-</body>
-<script src="pauseMenu.js"></script>
-<script src="controls.js"></script>
-<script src="globals.js"></script>
-<script src="gameArea.js"></script>
-<script src="updateGameArea.js"></script>
-<script src="component.js"></script>
-<script src="main.js"></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="pauseMenu.css">
+        <title>Jet Racer</title>
+    </head>
+    
+    <body onload="startGame()"></body>
+    
+    <script src="pauseMenu.js"></script>
+    <script src="controls.js"></script>
+    <script src="globals.js"></script>
+    <script src="gameArea.js"></script>
+    <script src="updateGameArea.js"></script>
+    <script src="component.js"></script>
+    <script src="main.js"></script>
 </html>
