Updated background to be CSS.

--- a/Jet-Racer/HTML/game.html
+++ b/Jet-Racer/HTML/game.html
@@ -10,7 +10,10 @@
         <title>Jet Racer</title>
     </head>
     
-    <body onload="startGame()"></body>
+    <body onload="startGame()">
+        <canvas id="canvas"></canvas>
+        <div class="background"></div>
+    </body>
     
     <script src="../JS/pauseMenu.js"></script>
     <script src="../JS/controls.js"></script>
