--- a/Jet-Racer/index.html
+++ b/Jet-Racer/index.html
@@ -9,6 +9,6 @@
     
     <body>
         <h1>Menu</h1>
-        <a href="/Jet-Racer/HTML/game.html">Start Game</a>
+        <a href="HTML/game.html">Start Game</a>
     </body>
 </html>
