Worked on the main menu

--- a/Jet-Racer/index.html
+++ b/Jet-Racer/index.html
@@ -4,11 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
+        <link rel="stylesheet" href="./CSS/index.css">
+        <script src="index.js" defer></script>
+
         <title>Jet Racer</title>
     </head>
     
     <body>
-        <h1>Menu</h1>
-        <a href="HTML/game.html">Start Game</a>
+        <div class="menu-items">
+            <img src="./IMGS/jet_logo.png" alt="Logo">
+            <h1>Jet Racer</h1>
+            <a id="startEndlessBtn">start endless</a>
+        </div>
     </body>
 </html>
