--- a/Jet-Racer/HTML/game.html
+++ b/Jet-Racer/HTML/game.html
@@ -11,7 +11,8 @@
     </head>
     
     <body onload="startGame()">
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas"></canvas
+        <div id="statBox"class="stat-box"></div> 
         <div class="background"></div>
     </body>
     
