--- a/Jet-Racer/HTML/game.html
+++ b/Jet-Racer/HTML/game.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+er<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -20,7 +20,7 @@
     <script src="../JS/controls.js"></script>
     <script src="../JS/globals.js"></script>
     <script src="../JS/gameArea.js"></script>
-    <script src="../JS/updateGameArea.js"></script>
+    <script src="../JS/updateGameArea.js" defer></script>
     <script src="../JS/component.js"></script>
     <script src="../JS/main.js"></script>
 </html>
