--- a/Jet-Racer/HTML/game.html
+++ b/Jet-Racer/HTML/game.html
@@ -20,7 +20,7 @@ er<!DOCTYPE html>
     <script src="../JS/controls.js"></script>
     <script src="../JS/globals.js"></script>
     <script src="../JS/gameArea.js"></script>
-    <script src="../JS/updateGameArea.js" defer></script>
+    <script src="../JS/updateGameArea.js"></script>
     <script src="../JS/component.js"></script>
     <script src="../JS/main.js"></script>
 </html>
