--- a/Jet-Racer/HTML/game.html
+++ b/Jet-Racer/HTML/game.html
@@ -1,4 +1,4 @@
-er<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -11,7 +11,7 @@ er<!DOCTYPE html>
     </head>
     
     <body onload="startGame()">
-        <canvas id="canvas"></canvas
+        <canvas id="canvas"></canvas>
         <div id="statBox"class="stat-box"></div> 
         <div class="background"></div>
     </body>
