--- a/Jet-Racer/index.html
+++ b/Jet-Racer/index.html
@@ -5,16 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link rel="stylesheet" href="./CSS/index.css">
-        <script src="index.js" defer></script>
+        <script src="./JS/index.js" defer></script>
 
         <title>Jet Racer</title>
     </head>
     
     <body>
         <div class="menu-items">
-            <img src="./IMGS/jet_logo.png" alt="Logo">
+            <!-- edit -->
+            <img id="playerAvatar" src="./IMGS/Characters/jet_logo.png" alt="Logo">
+
             <h1>Jet Racer</h1>
             <a id="startEndlessBtn">start endless</a>
+            <a id="startShipSelect">ship select</a> 
+            <!-- <a id="startLevelSelect"></a> -->
         </div>
     </body>
 </html>
