added main menu settings and music

--- a/Jet-Racer/HTML/ship_select.html
+++ b/Jet-Racer/HTML/ship_select.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="./../CSS/ship_select.css">
+<script src="./../JS/globalMusicVolume.js" defer></script>
 <script src="./../JS/ship_select.js" defer></script>
 
 	<title>Ship Select</title>
@@ -19,7 +20,7 @@
 		<a id="prev"><</a>
 		<a id="next">></a>
 	</nav>
-	<a id="back">Main Menu</a>
+	<a id="back">Select Ship</a>
 </div>
 	
 </body>
