Added level based map generator. Added WIP implementation of missile class, changed components to objects.

--- a/Jet-Racer/HTML/game.html
+++ b/Jet-Racer/HTML/game.html
@@ -21,6 +21,6 @@
     <script src="../JS/globals.js"></script>
     <script src="../JS/gameArea.js"></script>
     <script src="../JS/updateGameArea.js"></script>
-    <script src="../JS/component.js"></script>
+    <script src="../JS/objects.js"></script>
     <script src="../JS/main.js"></script>
 </html>
