--- a/Jet-Racer/HTML/game.html
+++ b/Jet-Racer/HTML/game.html
@@ -13,7 +13,7 @@
     <body onload="startGame()">
         <canvas id="canvas"></canvas>
         <div id="statBox" class="stat-box"></div> 
-        <div class="background"></div>
+        <div class="background" id="background"></div>
     </body>
     
     <script src="../JS/pauseMenu.js"></script>
