--- a/Jet-Racer/index.html
+++ b/Jet-Racer/index.html
@@ -28,6 +28,7 @@
             <h1>Jet Racer</h1>
             <a id="startEndlessBtn">start endless</a>
             <a id="startShipSelect">ship select</a>
+            <a id="startZoneSelect">Zone select</a> 
             <a id="settings">settings
                 <img src="/Jet-Racer/IMGS/Icons/settings-icon.png" alt="" class="settings-icon">
             </a>
