Added death menu

--- a/Jet-Racer/HTML/game.html
+++ b/Jet-Racer/HTML/game.html
@@ -17,6 +17,7 @@
     </body>
     
     <script src="../JS/pauseMenu.js"></script>
+    <script src="../JS/deathMenu.js"></script>
     <script src="../JS/controls.js"></script>
     <script src="../JS/globals.js"></script>
     <script src="../JS/gameArea.js"></script>
