Update and rename ship_select.html to shipSelect.html

--- a/Jet-Racer/HTML/shipSelect.html
+++ b/Jet-Racer/HTML/shipSelect.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="./../CSS/ship_select.css">
+<link rel="stylesheet" href="./../CSS/shipSelect.css">
 <script src="./../JS/globalMusicVolume.js" defer></script>
-<script src="./../JS/ship_select.js" defer></script>
+<script src="./../JS/shipSelect.js" defer></script>
 
 	<title>Ship Select</title>
 </head>
