--- a/Jet-Racer/index.html
+++ b/Jet-Racer/index.html
@@ -26,13 +26,12 @@
         <div class="menu-items">
             <img id="playerAvatar" src="./IMGS/Characters/jet_logo.png" alt="Logo">
             <h1>Jet Racer</h1>
-            <a id="startEndlessBtn">start endless</a>
-            <a id="startShipSelect">ship select</a>
-            <a id="startZoneSelect">Zone select</a> 
-            <a id="settings">settings
+            <a id="startEndlessBtn">Start Game</a>
+            <a id="startShipSelect">Ship Select</a>
+            <a id="startZoneSelect">Zone Select</a> 
+            <a id="settings">Settings
                 <img src="/Jet-Racer/IMGS/Icons/settings-icon.png" alt="" class="settings-icon">
             </a>
-            <!-- <a id="startLevelSelect"></a> -->
         </div>
     </body>
 </html>
