--- a/Jet-Racer/HTML/game.html
+++ b/Jet-Racer/HTML/game.html
@@ -13,7 +13,9 @@
     <body onload="startGame()">
         <canvas id="canvas"></canvas>
         <div id="statBox" class="stat-box"></div> 
-        <div id="background"></div>
+        <div id="container">
+            <div id="background"></div>
+        </div>
     </body>
     
     <script src="../JS/pauseMenu.js"></script>
