Fixed json config fetch issue.

--- a/Jet-Racer/HTML/game.html
+++ b/Jet-Racer/HTML/game.html
@@ -21,6 +21,7 @@
     <script src="../JS/pauseMenu.js"></script>
     <script src="../JS/deathMenu.js"></script>
     <script src="../JS/controls.js"></script>
+    <script src="../JS/config.js"></script>
     <script src="../JS/globals.js"></script>
     <script src="../JS/gameArea.js"></script>
     <script src="../JS/updateGameArea.js"></script>
